Align Hang with its following content

--- a/src/css/widget/_hang.scss
+++ b/src/css/widget/_hang.scss
@@ -2,6 +2,7 @@
 .hang {
   @media (min-width: $breakpoint-full) {
     margin-right: $width-gap;
+    margin-top: (($line-height-root - 1) / 2 * 1rem);
     position: absolute;
     right: 100%;
     width: $width-supplement;
@@ -17,7 +18,7 @@
 
 h1.hang {
   @media (min-width: $breakpoint-full) {
-    margin-top: 0;
+    margin-top: (($line-height-root - $line-height-h1) / 2 * 1rem);
   }
 }
 
@@ -28,8 +29,11 @@ section > h1.hang:first-child + * {
 }
 
 aside.hang {
+  $l: $line-height-small;
+
   clear: both;
   color: $color-fg-light;
   font-size: ($ratio-text-small * 1rem);
-  line-height: $line-height-small;
+  line-height: $l;
+  margin-top: (($line-height-root - $l) / 2 * 1rem);
 }
