Import files logically

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -10,3 +10,8 @@ body > main {
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
+
+@import "content/section";
+@import "content/section-heading";
+@import "content/section-subheading";
+@import "content/article-footer";
