--- a/src/css/_global-footer.scss
+++ b/src/css/_global-footer.scss
@@ -16,3 +16,6 @@ body > footer {
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
+
+@import "global-footer/footlinks";
+@import "global-footer/byline";
