--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -21,3 +21,6 @@ body > header {
 body > header a {
   text-decoration: none;
 }
+
+@import "global-header/logo";
+@import "global-header/site-navigation";
