--- a/src/css/_subcontent.scss
+++ b/src/css/_subcontent.scss
@@ -11,3 +11,5 @@ body > aside {
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
+
+@import "subcontent/site-search";
