--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -13,26 +13,11 @@
 // Core
 @import "core";
 
-// Global Header
+// Global
 @import "global-header";
-@import "global-header/logo";
-@import "global-header/site-navigation";
-
-// Content
 @import "content";
-@import "content/section";
-@import "content/section-heading";
-@import "content/section-subheading";
-@import "content/article-footer";
-
-// Subcontent
 @import "subcontent";
-@import "subcontent/site-search";
-
-// Global Footer
 @import "global-footer";
-@import "global-footer/footlinks";
-@import "global-footer/byline";
 
 // Widget
 @import "widget/fill";
