Use border for Site Navigation active item

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -17,15 +17,6 @@ body > header nav li {
 }
 
 body > header nav mark {
+  border-bottom: $width-border solid $color-accent;
   background-color: transparent;
-  display: block;
-  position: relative;
-}
-
-body > header nav mark::after {
-  border: $width-border-small solid $color-accent;
-  content: "";
-  display: block;
-  position: absolute;
-  width: 100%;
 }
