Sizing Global Header components relatively

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -1,7 +1,11 @@
 // Global Header
 body > header {
+  $r: $ratio-text-small;
+
   display: flex;
   flex-flow: row wrap;
+  font-size: ($r * 1rem);
+  height: ($r * $line-height-root * 1rem);
   margin-left: auto;
   margin-right: auto;
   margin-top: $margin;
@@ -10,6 +14,10 @@ body > header {
   padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-content) {
+    $r: $ratio-text;
+
+    font-size: ($r * 1rem);
+    height: ($r * $line-height-root * 1rem);
     margin-top: $margin-large;
   }
 
