--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -7,11 +7,10 @@ body > header nav ul {
 
 body > header nav li {
   display: block;
-  font-size: ($ratio-text-logo * 1rem);
+  height: 100%;
   margin-left: $width-gap-small;
 
   @media (min-width: $breakpoint-content) {
-    font-size: ($ratio-text-logo-content * 1rem);
     margin-left: $width-gap;
   }
 }
