--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -1,15 +1,12 @@
 // Logo
 body > header h1 {
   flex: auto;
-  font-size: ($ratio-text-logo * 1rem);
-  line-height: 1;
+  font-size: inherit;
+  height: 100%;
+  line-height: inherit;
   margin-bottom: 0;
   margin-top: 0;
   text-transform: uppercase;
-
-  @media (min-width: $breakpoint-content) {
-    font-size: ($ratio-text-logo-content * 1rem);
-  }
 
   @media (min-width: $breakpoint-full) {
     flex: 0 1 auto;
@@ -19,12 +16,8 @@ body > header h1 {
 }
 
 body > header h1 svg {
-  height: ($ratio-text-logo * $line-height-root * 1rem);
+  height: 100%;
   width: auto;
-
-  @media (min-width: $breakpoint-content) {
-    height: ($ratio-text-logo-content * $line-height-root * 1rem);
-  }
 }
 
 body > header h1 path {
