Categorize variables same as main

--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -21,12 +21,11 @@ $line-height-root: $line-height;
 
 $line-height-h1: $line-height-small;
 
-// Content
+// Global
 $ratio-text-section-heading: $ratio-text-huge;
 
 $ratio-text-article-footer: $ratio-text;
 
-// Global Footer
 $ratio-text-global-footer: $ratio-text-small;
 
 // Widget
