--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -39,10 +39,9 @@ $padding-left-blockquote: ($indent - $width-border-blockquote);
 
 $width-border-table: $width-border-small;
 
-// Content
+// Global
 $margin-top-section-heading: $margin-huge;
 
-// Subcontent
 $width-border-site-search-query: $width-border-small;
 $height-site-search-query: (1rem + ($width-border-site-search-query + $padding-large) * 2);
 $width-site-search-query-content: ($width-content / $ratio / $ratio);
