Simplify part name

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -1,4 +1,4 @@
-// Global Header
+// Header
 body > header {
   $r: $ratio-text-small;
 
@@ -31,5 +31,5 @@ body > header a {
   text-decoration: none;
 }
 
-@import "global-header/logo";
-@import "global-header/site-navigation";
+@import "header/logo";
+@import "header/site-navigation";
