--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,10 +14,10 @@
 @import "core";
 
 // Global
-@import "global-header";
+@import "header";
 @import "content";
 @import "subcontent";
-@import "global-footer";
+@import "footer";
 
 // Widget
 @import "widget/fill";
