--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -26,7 +26,7 @@ $ratio-text-section-heading: $ratio-text-huge;
 
 $ratio-text-article-footer: $ratio-text;
 
-$ratio-text-global-footer: $ratio-text-small;
+$ratio-text-footer: $ratio-text-small;
 
 // Widget
 $line-height-posts: $line-height-small;
