--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -1,6 +1,6 @@
-// Global Footer
+// Footer
 body > footer {
-  font-size: ($ratio-text-global-footer * 1rem);
+  font-size: ($ratio-text-footer * 1rem);
   margin-left: auto;
   margin-right: auto;
   max-width: $width-content;
@@ -17,5 +17,5 @@ body > footer {
   }
 }
 
-@import "global-footer/footlinks";
-@import "global-footer/byline";
+@import "footer/footlinks";
+@import "footer/byline";
