--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -5,7 +5,7 @@
   @media (min-width: $breakpoint-content) {
     position: absolute;
     right: $width-gap-small;
-    top: ((($line-height-root * $ratio-text-global-footer * 1rem) - $height-site-search-query) / 2);
+    top: ((($line-height-root * $ratio-text-footer * 1rem) - $height-site-search-query) / 2);
     width: $width-site-search-query-content;
     z-index: 1;
   }
