Classify components with one word

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -1,6 +1,6 @@
 // Content
 body > main {
-  margin: (0 - $margin-top-content-section-heading + $margin-large) auto $margin-top-content-section-heading;
+  margin: (0 - $margin-top-content-heading + $margin-large) auto $margin-top-content-heading;
   max-width: $width-content;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
@@ -12,6 +12,6 @@ body > main {
 }
 
 @import "content/section";
-@import "content/section-heading";
-@import "content/section-subheading";
-@import "content/article-footer";
+@import "content/heading";
+@import "content/subheading";
+@import "content/footer";
