--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -1,12 +1,12 @@
-// Site Search
+// Search
 [role="search"] {
   position: relative;
 
   @media (min-width: $breakpoint-content) {
     position: absolute;
     right: $width-gap-small;
-    top: ((($line-height-root * $ratio-text-footer * 1rem) - $height-subcontent-site-search-query) / 2);
-    width: $width-subcontent-site-search-query-content;
+    top: ((($line-height-root * $ratio-text-footer * 1rem) - $height-subcontent-search-query) / 2);
+    width: $width-subcontent-search-query-content;
     z-index: 1;
   }
 }
@@ -16,16 +16,16 @@
   border-radius: 0;
   font-family: inherit;
   font-size: inherit;
-  height: $height-subcontent-site-search-query;
-  line-height: $height-subcontent-site-search-query;
+  height: $height-subcontent-search-query;
+  line-height: $height-subcontent-search-query;
 }
 
 [role="search"] [name="q"] {
   background-color: white;
-  border: $width-border-subcontent-site-search-query solid $color-bg-dark;
+  border: $width-border-subcontent-search-query solid $color-bg-dark;
   box-sizing: border-box;
   color: $color-fg;
-  padding: 0 $height-subcontent-site-search-query 0 $padding;
+  padding: 0 $height-subcontent-search-query 0 $padding;
   width: 100%;
 }
 
@@ -38,12 +38,12 @@
   background-color: transparent;
   border: 0;
   box-sizing: border-box;
-  height: $height-subcontent-site-search-query;
+  height: $height-subcontent-search-query;
   padding: 0;
   position: absolute;
   right: 0;
   top: 0;
-  width: $height-subcontent-site-search-query;
+  width: $height-subcontent-search-query;
 }
 
 [role="search"] button svg {
