--- a/src/css/content/_footer.scss
+++ b/src/css/content/_footer.scss
@@ -1,12 +1,12 @@
-// Article Footer
+// Footer
 article > footer:first-child {
   color: $color-fg-light;
   float: left;
-  font-size: ($ratio-text-content-article-footer * 1rem);
+  font-size: ($ratio-text-content-footer * 1rem);
   width: 100%;
 
   @media (min-width: $breakpoint-full) {
-    line-height: ($line-height-h1 * $ratio-text-content-section-heading / $ratio-text-content-article-footer);
+    line-height: ($line-height-h1 * $ratio-text-content-heading / $ratio-text-content-footer);
     margin-right: $width-gap;
     position: absolute;
     right: 100%;
