Keep :root for custom properties

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -1,5 +1,5 @@
-// Root
-:root {
+// The document element
+html {
   font-family: $font-stack-system-ui;
   font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
   font-kerning: normal;
