Organize HTML templates to fit component name

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -3,7 +3,7 @@
   {{> head}}
 
   <body>
-    {{> global-header}}
+    {{> header}}
 
     <main>
       <section id="website">
@@ -100,6 +100,6 @@
     </main>
 
     {{> site-search}}
-    {{> global-footer}}
+    {{> footer}}
   </body>
 </html>
