--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -6,7 +6,7 @@
   {{> head}}
 
   <body>
-    {{> global-header}}
+    {{> header}}
 
     <main>
 
@@ -36,6 +36,6 @@
     </main>
 
     {{> site-search}}
-    {{> global-footer}}
+    {{> footer}}
   </body>
 </html>
