--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -3,7 +3,7 @@
   {{> head}}
 
   <body>
-    {{> global-header}}
+    {{> header}}
 
     <main>
       <section id="on-2015">
@@ -101,6 +101,6 @@
     </main>
 
     {{> site-search}}
-    {{> global-footer}}
+    {{> footer}}
   </body>
 </html>
