--- a/src/html/partial/head.mustache
+++ b/src/html/partial/head.mustache
@@ -1,10 +1,34 @@
 <head>
-  {{> meta}}
+  <meta charset="UTF-8">
+  <meta content="width=device-width" name="viewport">
+  <meta content="{{description}}" name="description">
+  {{#weblog_child}}<meta content="blosxom v$version" name="generator">{{/weblog_child}}
 
   {{#home}}<title>{{site_title}}</title>{{/home}}
   {{^home}}<title>{{short_title}} - {{site_title}}</title>{{/home}}
 
-  {{> link}}
-  {{> script}}
-  {{> social}}
+  <link href="{{canonical}}" rel="canonical">
+  <link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
+  <link href="{{license_url}}" rel="license">
+
+  {{#home}}
+    {{#articles}}
+      {{#isLatest}}<link href="{{link}}" rel="prerender">{{/isLatest}}
+    {{/articles}}
+  {{/home}}
+
+  <link href="/styles/main.min.css" media="screen" rel="stylesheet">
+  <link href="/styles/print.min.css" media="print" rel="stylesheet">
+
+  <script defer src="/scripts/main.min.js"></script>
+
+  <meta content="{{card_type}}" name="twitter:card">
+  <meta content="{{twitter_username}}" name="twitter:site">
+  <meta content="{{scheme}}//{{domain}}{{canonical}}" property="og:url">
+  <meta content="{{short_title}}" property="og:title">
+  <meta content="{{description}}" property="og:description">
+  <meta content="{{site_title}}" property="og:site_name">
+  <meta content="{{scheme}}//{{domain}}{{cover}}" property="og:image">
+  <meta content="{{type}}" property="og:type">
+  <meta content="{{lang}}_{{region}}" property="og:locale">
 </head>
