--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -3,7 +3,7 @@
   {{> head}}
 
   <body>
-    {{> global-header}}
+    {{> header}}
 
     <main>
       <section>
@@ -27,6 +27,6 @@
     </main>
 
     {{> site-search}}
-    {{> global-footer}}
+    {{> footer}}
   </body>
 </html>
