Move variables global

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -56,12 +56,10 @@ hr::before {
 }
 
 pre {
-  $r: $ratio-text-small;
-
   clear: both;
   font-family: $font-stack-monospace;
   font-feature-settings: "zero" 1;
-  font-size: ($r * 1rem);
+  font-size: ($ratio-text-pre * 1rem);
   font-variant-numeric: lining-nums proportional-nums slashed-zero;
   line-height: $line-height-small;
   margin: 0 0 $margin;
