--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -1,10 +1,8 @@
 body > header {
-  $r: $ratio-text-small;
-
   display: flex;
   flex-flow: row wrap;
-  font-size: ($r * 1rem);
-  height: ($r * $line-height-root * 1rem);
+  font-size: ($ratio-text-header * 1rem);
+  height: ($ratio-text-header * $line-height-root * 1rem);
   margin-left: auto;
   margin-right: auto;
   margin-top: $margin;
@@ -13,10 +11,8 @@ body > header {
   padding-right: $width-gap-small;
 
   @media (min-width: $breakpoint-content) {
-    $r: $ratio-text;
-
-    font-size: ($r * 1rem);
-    height: ($r * $line-height-root * 1rem);
+    font-size: ($ratio-text-header-content * 1rem);
+    height: ($ratio-text-header-content * $line-height-root * 1rem);
     margin-top: $margin-large;
   }
 
