--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -21,9 +21,17 @@ $line-height-root: $line-height;
 
 $line-height-h1: $line-height-small;
 
+$ratio-text-pre: $ratio-text-small;
+
 // Global
+$ratio-text-header: $ratio-text-small;
+$ratio-text-header-content: $ratio-text;
+
 $ratio-text-content-heading: $ratio-text-huge;
 
 $ratio-text-content-footer: $ratio-text;
 
 $ratio-text-footer: $ratio-text-small;
+
+// Widget
+$line-height-hang-aside: $line-height-small;
