--- a/src/css/widget/_hang.scss
+++ b/src/css/widget/_hang.scss
@@ -28,11 +28,9 @@ section > h1.hang:first-child + * {
 }
 
 aside.hang {
-  $l: $line-height-small;
-
   clear: both;
   color: $color-fg-light;
   font-size: ($ratio-text-small * 1rem);
-  line-height: $l;
-  margin-top: (($line-height-root - $l) / 2 * 1rem);
+  line-height: $line-height-hang-aside;
+  margin-top: (($line-height-root - $line-height-hang-aside) / 2 * 1rem);
 }
