Revert "Align Hang with its following content"
This reverts commit 25ec32fb0df1d0e22f13471778a9edf77637871d.

--- a/src/css/widget/_hang.scss
+++ b/src/css/widget/_hang.scss
@@ -1,7 +1,6 @@
 .hang {
   @media (min-width: $breakpoint-full) {
     margin-right: $width-gap;
-    margin-top: (($line-height-root - 1) / 2 * 1rem);
     position: absolute;
     right: 100%;
     width: $width-supplement;
@@ -17,7 +16,7 @@
 
 h1.hang {
   @media (min-width: $breakpoint-full) {
-    margin-top: (($line-height-root - $line-height-h1) / 2 * 1rem);
+    margin-top: 0;
   }
 }
 
@@ -31,6 +30,5 @@ aside.hang {
   clear: both;
   color: $color-fg-light;
   font-size: ($ratio-text-small * 1rem);
-  line-height: $line-height-hang-aside;
-  margin-top: (($line-height-root - $line-height-hang-aside) / 2 * 1rem);
+  line-height: $line-height-small;
 }
