--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -1,10 +1,7 @@
 // The document element
 html {
   font-family: $font-stack-system-ui;
-  font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
-  font-kerning: normal;
   font-size: percentage($ratio-text-root);
-  font-variant-numeric: lining-nums proportional-nums;
   line-height: $line-height-root;
 
   @media (min-width: $breakpoint-content) {
@@ -28,7 +25,7 @@ body {
 }
 
 h1 {
-  font-weight: 400;
+  font-weight: inherit;
   line-height: $line-height-h1;
   margin: 0 0 $margin;
 }
@@ -58,9 +55,7 @@ hr::before {
 pre {
   clear: both;
   font-family: $font-stack-monospace;
-  font-feature-settings: "zero" 1;
   font-size: ($ratio-text-pre * 1rem);
-  font-variant-numeric: lining-nums proportional-nums slashed-zero;
   line-height: $line-height-small;
   margin: 0 0 $margin;
   overflow: auto;
@@ -105,7 +100,7 @@ dl dl {
 }
 
 dt {
-  font-weight: 700;
+  font-weight: bolder;
   margin-bottom: $margin-small;
 }
 
@@ -165,7 +160,7 @@ a {
 
 em {
   font-style: normal;
-  font-weight: 700;
+  font-weight: bolder;
 }
 
 strong {
@@ -180,7 +175,7 @@ cite {
 
 abbr {
   cursor: help;
-  letter-spacing: $width-border-small;
+  letter-spacing: (1rem / 8);
   text-decoration: none;
   text-decoration: underline dotted;
 }
@@ -190,9 +185,7 @@ var,
 samp,
 kbd {
   font-family: $font-stack-monospace;
-  font-feature-settings: "zero" 1;
   font-size: 1em;
-  font-variant-numeric: lining-nums proportional-nums slashed-zero;
 }
 
 var {
@@ -236,8 +229,6 @@ table {
   border-spacing: 0;
   clear: both;
   display: inline-block;
-  font-feature-settings: "tnum" 1;
-  font-variant-numeric: lining-nums tabular-nums slashed-zero;
   margin: 0 0 $margin;
   max-width: 100%;
   overflow-x: auto;
