--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -4,7 +4,7 @@
   @media (min-width: $breakpoint-content) {
     position: absolute;
     right: $width-gap-small;
-    top: ((($line-height-root * $ratio-text-footer * 1rem) - $height-subcontent-search-query) / 2);
+    top: (($line-height-root * $ratio-text-footer * 1rem - $height-subcontent-search-query) / 2);
     width: $width-subcontent-search-query-content;
     z-index: 1;
   }
