Control special white spaces with margin-top

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -5,7 +5,7 @@ body > header {
   height: ($ratio-text-header * $line-height-root * 1rem);
   margin-left: auto;
   margin-right: auto;
-  margin-top: $margin;
+  margin-top: $margin-top-header;
   max-width: $width-content;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
@@ -13,10 +13,11 @@ body > header {
   @media (min-width: $breakpoint-content) {
     font-size: ($ratio-text-header-content * 1rem);
     height: ($ratio-text-header-content * $line-height-root * 1rem);
-    margin-top: $margin-large;
+    margin-top: $margin-top-header-content;
   }
 
   @media (min-width: $breakpoint-full) {
+    margin-top: $margin-top-header-full;
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
