--- a/src/css/_subcontent.scss
+++ b/src/css/_subcontent.scss
@@ -1,6 +1,7 @@
 body > aside {
   margin-left: auto;
   margin-right: auto;
+  margin-top: $margin-gargantuan;
   max-width: $width-content;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
