--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -2,7 +2,8 @@
 $margin: ($ratio * 1rem);
 $margin-small: ($margin / $ratio / $ratio);
 $margin-large: ($margin * $ratio);
-$margin-huge: ($margin * $ratio * $ratio * $ratio);
+$margin-huge: ($margin * $ratio * $ratio);
+$margin-gargantuan: ($margin * $ratio * $ratio * $ratio);
 
 // Indent
 $indent: $margin;
@@ -40,7 +41,11 @@ $padding-left-blockquote: ($indent - $width-border-blockquote);
 $width-border-table: $width-border-small;
 
 // Global
-$margin-top-content-heading: $margin-huge;
+$margin-top-header: $margin;
+$margin-top-header-content: $margin-large;
+$margin-top-header-full: $margin-huge;
+
+$margin-top-content-heading: $margin-gargantuan;
 
 $width-border-subcontent-search-query: $width-border-small;
 $height-subcontent-search-query: (1rem + ($width-border-subcontent-search-query + $padding-large) * 2);
