--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -1,11 +1,17 @@
 body > main {
-  margin: (0 - $margin-top-content-heading + $margin-large) auto $margin-top-content-heading;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: (0 - $margin-top-content-heading + $margin-top-header * $ratio);
   max-width: $width-content;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
+  @media (min-width: $breakpoint-content) {
+    margin-top: (0 - $margin-top-content-heading + $margin-top-header-content * $ratio);
+  }
+
   @media (min-width: $breakpoint-full) {
-    margin-top: 0;
+    margin-top: (0 - $margin-top-content-heading + $margin-top-header-full * $ratio);
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
