Simplify text sizes

--- a/src/css/content/_subheading.scss
+++ b/src/css/content/_subheading.scss
@@ -1,6 +1,7 @@
 section * h1,
 article * h1 {
-  font-size: ($ratio-text-large * 1rem);
+  font-size: inherit;
+  font-weight: bolder;
   margin-bottom: $margin-small;
   margin-top: $margin-large;
 }
