--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -2,12 +2,10 @@
 $ratio: 1.7;
 
 // Text Size
-$ratio-text-primary: 1;
-$ratio-text-secondary: (($ratio + 1) / 2);
-$ratio-text: $ratio-text-primary;
-$ratio-text-small: ($ratio-text-secondary / $ratio);
-$ratio-text-large: $ratio-text-secondary;
-$ratio-text-huge: ($ratio-text-primary * $ratio);
+$ratio-text: 1;
+$ratio-text-huge: ($ratio-text * $ratio);
+$ratio-text-large: (($ratio-text + $ratio-text-huge) / 2);
+$ratio-text-small: ($ratio-text-large / $ratio);
 
 // Line Height
 $line-height: $ratio;
@@ -15,8 +13,8 @@ $line-height-small: ($line-height * 0.8);
 
 // Core
 $ratio-text-root: $ratio-text;
-$ratio-text-root-content: ($ratio-text + (($ratio-text-large - $ratio-text) / 3));
-$ratio-text-root-full: ($ratio-text + (($ratio-text-large - $ratio-text) / 3 * 2));
+$ratio-text-root-content: (($ratio-text-large - $ratio-text) / 4 + $ratio-text);
+$ratio-text-root-full: (($ratio-text-large - $ratio-text) / 2 + $ratio-text);
 $line-height-root: $line-height;
 
 $line-height-h1: $line-height-small;
