Wrap Navigation if needed

--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -8,10 +8,11 @@ body > header nav ul {
 body > header nav li {
   display: block;
   height: 100%;
-  margin-left: $width-gap-small;
+  margin-right: $width-gap-small;
 
   @media (min-width: $breakpoint-content) {
     margin-left: $width-gap;
+    margin-right: 0;
   }
 }
 
