Add bottom white spaces to Logo for wrapping Header

--- a/src/css/header/_logo.scss
+++ b/src/css/header/_logo.scss
@@ -3,7 +3,7 @@ body > header h1 {
   font-size: inherit;
   height: 100%;
   line-height: inherit;
-  margin-bottom: 0;
+  margin-bottom: $margin-small;
   margin-top: 0;
   text-transform: uppercase;
 
