Use keyword for font-weight

--- a/src/css/natural.scss
+++ b/src/css/natural.scss
@@ -124,12 +124,12 @@ a {
 
 em {
   font-style: normal;
-  font-weight: 700;
+  font-weight: bold;
 }
 
 strong {
   color: $stress;
-  font-weight: 700;
+  font-weight: bold;
 }
 
 q::before {
@@ -177,7 +177,7 @@ th {
   border: 1px solid darken($light, 45%);
   color: $dark;
   display: block;
-  font-weight: 700;
+  font-weight: bold;
   max-width: 100%;
   overflow-x: auto;
   padding: ($font-size / 2);
@@ -215,11 +215,11 @@ td {
 
 .seealso {
   font-size: 1.17em;
-  font-weight: 700;
+  font-weight: bold;
 }
 
 .seealso a {
-  font-weight: 400;
+  font-weight: normal;
 }
 
 // Media Queries
