Simplify mustache markup

--- a/src/html/partial/head.mustache
+++ b/src/html/partial/head.mustache
@@ -2,21 +2,13 @@
   <meta charset="UTF-8">
   <meta content="width=device-width" name="viewport">
   <meta content="{{description}}" name="description">
-  {{#weblog_child}}<meta content="blosxom v$version" name="generator">{{/weblog_child}}
+  {{#weblog_child}}<meta content="Blosxom v$version" name="generator">{{/weblog_child}}
 
-  {{#home}}<title>{{site_title}}</title>{{/home}}
-  {{^home}}<title>{{short_title}} - {{site_title}}</title>{{/home}}
+  <title>{{^home}}{{short_title}} - {{/home}}{{site_title}}</title>
 
   <link href="{{canonical}}" rel="canonical">
   <link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
   <link href="{{license_url}}" rel="license">
-
-  {{#home}}
-    {{#articles}}
-      {{#isLatest}}<link href="{{link}}" rel="prerender">{{/isLatest}}
-    {{/articles}}
-  {{/home}}
-
   <link href="/styles/main.min.css" media="screen" rel="stylesheet">
   <link href="/styles/print.min.css" media="print" rel="stylesheet">
 
