--- a/src/html/partial/header.mustache
+++ b/src/html/partial/header.mustache
@@ -3,12 +3,9 @@
 
   <nav>
     <ul>
-      {{#documents}}<li><mark>特集</mark></li>{{/documents}}
-      {{^documents}}<li><a href="/documents/">特集</a></li>{{/documents}}
-      {{#weblog}}<li><mark>{{#weblog_child}}<a href="/blog/">{{/weblog_child}}ウェブログ{{#weblog_child}}</a>{{/weblog_child}}</mark></li>{{/weblog}}
-      {{^weblog}}<li><a href="/blog/">ウェブログ</a></li>{{/weblog}}
-      {{#about}}<li><mark>いろいろ</mark></li>{{/about}}
-      {{^about}}<li><a href="/about/">いろいろ</a></li>{{/about}}
+      <li>{{#documents}}<mark>{{/documents}}<a href="/documents/">特集</a>{{#documents}}</mark>{{/documents}}</li>
+      <li>{{#weblog}}<mark>{{/weblog}}<a href="/blog/">ウェブログ</a>{{#weblog}}</mark>{{/weblog}}</li>
+      <li>{{#about}}<mark>{{/about}}<a href="/about/">いろいろ</a>{{#about}}</mark>{{/about}}</li>
     </ul>
   </nav>
 </header>
