Rename breakpoints for scaling further

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -6,11 +6,11 @@ body > main {
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     margin-top: (0 - $margin-top-content-heading + $margin-top-header-content * $ratio);
   }
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     margin-top: (0 - $margin-top-content-heading + $margin-top-header-full * $ratio);
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
