--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -4,11 +4,11 @@ html {
   font-size: percentage($ratio-text-root);
   line-height: $line-height-root;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     font-size: percentage($ratio-text-root-content);
   }
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     font-size: percentage($ratio-text-root-full);
   }
 
@@ -60,7 +60,7 @@ pre {
   margin: 0 0 $margin;
   overflow: auto;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     overflow: visible;
     overflow-wrap: break-word;
     white-space: pre-wrap;
@@ -120,7 +120,7 @@ figcaption {
   font-size: ($ratio-text-small * 1rem);
   margin-top: $margin-small;
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     bottom: 0;
     display: block;
     margin-right: $width-gap;
@@ -139,7 +139,7 @@ blockquote + figcaption {
   padding-left: $padding-left-blockquote;
   padding-top: $margin;
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     margin-right: 0;
     position: static;
     width: auto;
