--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -7,11 +7,11 @@ body > footer {
   padding-right: $width-gap-small;
   position: relative;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     display: flex;
   }
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
