--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -10,13 +10,13 @@ body > header {
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     font-size: ($ratio-text-header-content * 1rem);
     height: ($ratio-text-header-content * $line-height-root * 1rem);
     margin-top: $margin-top-header-content;
   }
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     margin-top: $margin-top-header-full;
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
