--- a/src/css/_subcontent.scss
+++ b/src/css/_subcontent.scss
@@ -7,7 +7,7 @@ body > aside {
   padding-right: $width-gap-small;
   position: relative;
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
 }
