--- a/src/css/content/_footer.scss
+++ b/src/css/content/_footer.scss
@@ -4,7 +4,7 @@ article > footer:first-child {
   font-size: ($ratio-text-content-footer * 1rem);
   width: 100%;
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     line-height: ($line-height-h1 * $ratio-text-content-heading / $ratio-text-content-footer);
     margin-right: $width-gap;
     position: absolute;
