--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -35,7 +35,7 @@
     background-size: $width-content-outer 1px;
   }
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     background-image: linear-gradient(to right, $g 0, $g $width-gap-small, $c $width-gap-small, $c ($width-gap-small + $width-supplement), $g ($width-gap-small + $width-supplement), $g ($width-gap-small + $width-supplement + $width-gap), $c ($width-gap-small + $width-supplement + $width-gap), $c ($width-gap-small + $width-full), $g ($width-gap-small + $width-full), $g $width-full-outer);
     background-size: $width-full-outer 1px;
   }
@@ -64,12 +64,12 @@ body::after {
   position: fixed;
   right: 0.5rem;
 
-  @media (min-width: $breakpoint-content) {
-    content: "Medium: #{$breakpoint-content / 1rem * 16px}";
+  @media (min-width: $breakpoint-large) {
+    content: "Medium: #{$breakpoint-large / 1rem * 16px}";
   }
 
-  @media (min-width: $breakpoint-full) {
-    content: "Large: #{$breakpoint-full / 1rem * 16px}";
+  @media (min-width: $breakpoint-huge) {
+    content: "Large: #{$breakpoint-huge / 1rem * 16px}";
   }
 
   @media print {
