--- a/src/css/footer/_byline.scss
+++ b/src/css/footer/_byline.scss
@@ -2,13 +2,13 @@ body > footer address {
   font-style: normal;
   position: relative;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     flex-grow: 1;
     margin-bottom: 0;
     order: -1;
   }
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     flex-grow: 0;
     margin-left: (- ($width-supplement + $width-gap));
     margin-right: $width-gap;
