--- a/src/css/footer/_footlinks.scss
+++ b/src/css/footer/_footlinks.scss
@@ -2,7 +2,7 @@ body > footer p {
   color: $color-fg-light;
   margin-bottom: $margin-small;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     margin-bottom: 0;
     margin-right: ($width-gap + $width-subcontent-search-query-content);
   }
