--- a/src/css/header/_logo.scss
+++ b/src/css/header/_logo.scss
@@ -7,7 +7,7 @@ body > header h1 {
   margin-top: 0;
   text-transform: uppercase;
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     flex: 0 1 auto;
     margin-left: (- ($width-supplement + $width-gap));
     width: $width-supplement;
