--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -10,7 +10,7 @@ body > header nav li {
   height: 100%;
   margin-right: $width-gap-small;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     margin-left: $width-gap;
     margin-right: 0;
   }
