--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -1,7 +1,7 @@
 [role="search"] {
   position: relative;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     position: absolute;
     right: $width-gap-small;
     top: (($line-height-root * $ratio-text-footer * 1rem - $height-subcontent-search-query) / 2);
