--- a/src/css/widget/_fill.scss
+++ b/src/css/widget/_fill.scss
@@ -1,13 +1,13 @@
 .fill {
   clear: both;
 
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     margin-left: (- ($width-supplement + $width-gap));
   }
 }
 
 .fill figcaption {
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     bottom: auto;
     left: 0;
     margin-top: $margin;
