--- a/src/css/widget/_flat.scss
+++ b/src/css/widget/_flat.scss
@@ -1,7 +1,7 @@
 .flat {
   clear: both;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -10,14 +10,14 @@
 }
 
 .flat li {
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     display: block;
     width: calc((100% - #{$width-gap} * 2) / 3);
   }
 }
 
 .flat li:nth-child(3n + 2):last-child {
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     width: calc((100% - #{$width-gap} * 2) / 3 * 2 + #{$width-gap});
   }
 }
