--- a/src/css/widget/_hang.scss
+++ b/src/css/widget/_hang.scss
@@ -1,5 +1,5 @@
 .hang {
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     margin-right: $width-gap;
     position: absolute;
     right: 100%;
@@ -9,19 +9,19 @@
 }
 
 .hang img {
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     width: 100%;
   }
 }
 
 h1.hang {
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     margin-top: 0;
   }
 }
 
 section > h1.hang:first-child + * {
-  @media (min-width: $breakpoint-full) {
+  @media (min-width: $breakpoint-huge) {
     margin-top: $margin-top-content-heading;
   }
 }
