--- a/src/css/widget/_posts.scss
+++ b/src/css/widget/_posts.scss
@@ -6,7 +6,7 @@
   list-style-type: none;
   margin-bottom: $margin;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     display: flex;
     margin-bottom: $margin-small;
     white-space: nowrap;
@@ -17,7 +17,7 @@
   color: $color-fg-light;
   display: block;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     margin-left: $width-gap-small;
     order: 1;
   }
@@ -26,7 +26,7 @@
 .posts a {
   text-decoration: none;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-large) {
     display: block;
     flex-basis: 0;
     flex-grow: 1;
