Fix Header height on initial screen

--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -8,12 +8,15 @@ body > header nav ul {
 body > header nav li {
   display: block;
   height: 100%;
-  margin-right: $width-gap-small;
+  margin-left: $width-gap-small;
 
   @media (min-width: $breakpoint-large) {
     margin-left: $width-gap;
-    margin-right: 0;
   }
+}
+
+body > header nav li:first-child {
+  margin-left: 0;
 }
 
 body > header nav mark {
