--- a/src/css/header/_logo.scss
+++ b/src/css/header/_logo.scss
@@ -1,7 +1,7 @@
 body > header h1 {
   flex: auto;
   font-size: inherit;
-  height: 100%;
+  height: ($ratio-text-header * $line-height-root * 1rem);
   line-height: inherit;
   margin-bottom: $margin-small;
   margin-top: 0;
@@ -10,6 +10,7 @@ body > header h1 {
   @media (min-width: $breakpoint-huge) {
     flex: 0 1 auto;
     margin-left: (- ($width-supplement + $width-gap));
+    margin-right: $width-gap;
     width: $width-supplement;
   }
 }
