Update Logo (League Gothic)

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -2,6 +2,7 @@ body > header {
   display: flex;
   flex-flow: row wrap;
   font-size: ($ratio-text-header * 1rem);
+  height: ($ratio-text-header * $line-height-root * 1rem);
   margin-left: auto;
   margin-right: auto;
   margin-top: $margin-top-header;
