--- a/src/css/header/_logo.scss
+++ b/src/css/header/_logo.scss
@@ -1,7 +1,7 @@
 body > header h1 {
   flex: auto;
   font-size: inherit;
-  height: ($ratio-text-header * $line-height-root * 1rem);
+  height: 100%;
   line-height: inherit;
   margin-bottom: $margin-small;
   margin-top: 0;
