Set Site Navigation height at root

--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -1,4 +1,8 @@
 // Navigation
+body > header nav {
+  height: 100%;
+}
+
 body > header nav ul {
   display: flex;
   margin-bottom: 0;
@@ -7,7 +11,6 @@ body > header nav ul {
 
 body > header nav li {
   display: block;
-  height: 100%;
   margin-left: $width-gap-small;
 
   @media (min-width: $breakpoint-large) {
