Revert "Remove Displace widget"
This reverts commit 92dd91b8d8438be9803575ef11dd5c0db150c388.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -20,6 +20,7 @@
 @import "footer";
 
 // Widget
+@import "widget/displace";
 @import "widget/fill";
 @import "widget/flat";
 @import "widget/hang";
