--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -114,16 +114,18 @@ figure {
 }
 
 figcaption {
-  border-bottom: $width-border-small solid $color-bg-dark;
+  border-left: $width-border solid $color-bg-dark;
   color: $color-fg-light;
   display: inline-block;
   font-size: ($ratio-text-small * 1rem);
   margin-top: $margin-small;
+  padding-left: $width-gap-small;
 
   @media (min-width: $breakpoint-huge) {
     bottom: 0;
     display: block;
     margin-right: $width-gap;
+    margin-top: 0;
     position: absolute;
     right: 100%;
     width: $width-supplement;
@@ -132,7 +134,6 @@ figcaption {
 }
 
 blockquote + figcaption {
-  border-bottom: 0;
   border-left: $width-border-blockquote solid $color-border-blockquote;
   font-size: inherit;
   margin-top: 0;
