Use Google for site search

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -79,7 +79,7 @@
 
           <ul class="flat">
             <li><a href="https://www.cloudflare.com/">CloudFlare</a></li>
-            <li><a href="https://duckduckgo.com/">DuckDuckGo</a></li>
+            <li><a href="https://www.google.com/">Google</a></li>
             <li><a href="https://www.gandi.net/">Gandi</a></li>
             <li><a href="https://www.github.com/">GitHub</a></li>
           </ul>
