Reduce figcaption width about padding and border

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -128,7 +128,7 @@ figcaption {
     margin-top: 0;
     position: absolute;
     right: 100%;
-    width: $width-supplement;
+    width: ($width-supplement - $width-border - $width-gap-small);
     z-index: 1;
   }
 }
