Align Displace caption on right

--- a/src/css/widget/_displace.scss
+++ b/src/css/widget/_displace.scss
@@ -9,9 +9,14 @@
 
 .displace figcaption {
   @media (min-width: $breakpoint-huge) {
+    border-left: 0;
+    border-right: $width-border solid $color-bg-dark;
     left: 100%;
     margin-left: $width-gap;
     margin-right: 0;
+    padding-left: 0;
+    padding-right: $width-gap-small;
     right: auto;
+    text-align: right;
   }
 }
