Load variables at once

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -5,10 +5,7 @@
  */
 
 // Variable
-@import "var/font";
-@import "var/color";
-@import "var/ratio";
-@import "var/size";
+@import "var";
 
 // Columns
 .js-debug-columns::before {
