--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -5,10 +5,7 @@
  */
 
 // Variable
-@import "var/font";
-@import "var/color";
-@import "var/ratio";
-@import "var/size";
+@import "var";
 
 // Core
 @import "core";
