Add sign to last paragraph

--- a/src/css/_content.scss
+++ b/src/css/_content.scss
@@ -17,6 +17,7 @@ body > main {
 }
 
 @import "content/section";
+@import "content/article";
 @import "content/heading";
 @import "content/subheading";
 @import "content/footer";
