--- a/src/css/_footer.scss
+++ b/src/css/_footer.scss
@@ -2,6 +2,7 @@ body > footer {
   font-size: ($ratio-text-footer * 1rem);
   margin-left: auto;
   margin-right: auto;
+  margin-top: $margin-large;
   max-width: $width-content;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
