--- a/src/css/_subcontent.scss
+++ b/src/css/_subcontent.scss
@@ -1,7 +1,6 @@
 body > aside {
   margin-left: auto;
   margin-right: auto;
-  margin-top: $margin-gargantuan;
   max-width: $width-content;
   padding-left: $width-gap-small;
   padding-right: $width-gap-small;
@@ -10,6 +9,11 @@ body > aside {
   @media (min-width: $breakpoint-huge) {
     padding-left: ($width-gap-small + $width-supplement + $width-gap);
   }
+}
+
+body > aside h1 {
+  font-size: ($ratio-text-content-heading * 1rem);
+  margin-top: $margin-top-content-heading;
 }
 
 @import "subcontent/search";
