--- a/src/html/partial/subcontent.mustache
+++ b/src/html/partial/subcontent.mustache
@@ -1,4 +1,6 @@
 <aside>
+  <h1>ウェブサイト内から検索</h1>
+
   <form action="https://www.google.com/search" role="search">
     <input name="as_sitesearch" type="hidden" value="{{domain}}">
     <input name="q" placeholder="例: Blosxom" required size="32" type="search" aria-label="検索">
