Add light accent color

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -132,10 +132,14 @@ body::after {
 }
 
 .debug-colors li:nth-child(4)::before {
-  background-color: $color-bg;
+  background-color: $color-accent-light;
 }
 
 .debug-colors li:nth-child(5)::before {
+  background-color: $color-bg;
+}
+
+.debug-colors li:nth-child(6)::before {
   background-color: $color-bg-dark;
 }
 
