--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -11,6 +11,8 @@ $color-accent: hsl(195, 75%, 25%);
 $color-fg-light: hsl(45, 5%, 30%);
 $color-bg-dark: hsl(45, 10%, 75%);
 
+$color-accent-light: hsl(195, 75%, 45%);
+
 // Core
 $color-border-blockquote: $color-bg-dark;
 
