Lighten active colors

--- a/src/css/header/_navigation.scss
+++ b/src/css/header/_navigation.scss
@@ -24,5 +24,5 @@ body > header nav li:first-child {
 
 body > header nav mark {
   background-color: transparent;
-  border-bottom: $width-border solid $color-accent;
+  border-bottom: $width-border solid $color-accent-light;
 }
