--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -21,7 +21,7 @@
 }
 
 [role="search"] [name="q"]:focus {
-  border-color: $color-accent;
+  border-color: $color-accent-light;
 }
 
 [role="search"] button {
