Highlight Site Search button on focus

--- a/src/css/subcontent/_search.scss
+++ b/src/css/subcontent/_search.scss
@@ -45,3 +45,7 @@
 [role="search"] button path {
   fill: $color-fg-light;
 }
+
+[role="search"] [name="q"]:focus + button path {
+  fill: $color-accent-light;
+}
