--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -21,7 +21,15 @@ html {
 body {
   background-color: $color-bg;
   color: $color-fg;
-  margin: 0 0 $margin;
+  margin: 0 0 $margin-top-header;
+
+  @media (min-width: $breakpoint-large) {
+    margin-bottom: $margin-top-header-content;
+  }
+
+  @media (min-width: $breakpoint-huge) {
+    margin-bottom: $margin-top-header-full;
+  }
 }
 
 h1 {
